--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.36",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.8.3",
+    "styled-components": "^6.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
