--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.16.0"
+    "socket.io": "^4.7.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.20",
-    "@types/ws": "^8.5.10",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
